<?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>



    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white"
        android:orientation="horizontal"
        tools:context=".TitleFragment">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/shoe_img"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/shoestore_img"
            tools:ignore="ImageContrastCheck"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginTop="352dp"
            android:layout_marginEnd="304dp"
            android:text="@string/name1_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.141" />

        <TextView
            android:id="@+id/password_text"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:text="@string/password_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.717" />

        <EditText
            android:id="@+id/person_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.651"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/password_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="200dp"
            android:ems="10"
            android:inputType="numberPassword"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.651"
            app:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="128dp"
            android:backgroundTint="@color/purple_700"
            android:text="@string/done_button"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>